-- MySQL Workbench Forward Engineering

SET @OLD_UNIQUE_CHECKS=@@UNIQUE_CHECKS, UNIQUE_CHECKS=0;
SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS, FOREIGN_KEY_CHECKS=0;
SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION';

-- -----------------------------------------------------
-- Schema mydb
-- -----------------------------------------------------
-- -----------------------------------------------------
-- Schema ssafytrip
-- -----------------------------------------------------

-- -----------------------------------------------------
-- Schema ssafytrip
-- -----------------------------------------------------
CREATE SCHEMA IF NOT EXISTS `ssafytrip` DEFAULT CHARACTER SET utf8mb4 COLLATE utf8mb4_0900_ai_ci ;
USE `ssafytrip` ;

-- -----------------------------------------------------
-- Table `ssafytrip`.`sidos`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `ssafytrip`.`sidos` ;

CREATE TABLE IF NOT EXISTS `ssafytrip`.`sidos` (
	`no` int NOT NULL AUTO_INCREMENT  comment '시도번호',
	`sido_code` int NOT NULL comment '시도코드',
	`sido_name` varchar(20) DEFAULT NULL comment '시도이름',
    PRIMARY KEY (`no`),
    UNIQUE INDEX `sido_code_UNIQUE` (`sido_code` ASC) VISIBLE)
    ENGINE = InnoDB
    AUTO_INCREMENT = 18
    DEFAULT CHARACTER SET = utf8mb4
    COLLATE = utf8mb4_0900_ai_ci comment '시도정보테이블';

-- -----------------------------------------------------
-- Table `ssafytrip`.`guguns`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `ssafytrip`.`guguns` ;

CREATE TABLE IF NOT EXISTS `ssafytrip`.`guguns` (
	`no` int NOT NULL AUTO_INCREMENT comment '구군번호',
	`sido_code` int NOT NULL comment '시도코드',
	`gugun_code` int NOT NULL comment '구군코드',
	`gugun_name` varchar(20) DEFAULT NULL comment '구군이름',
    PRIMARY KEY (`no`),
    INDEX `guguns_sido_to_sidos_cdoe_fk_idx` (`sido_code` ASC) VISIBLE,
    INDEX `gugun_code_idx` (`gugun_code` ASC) VISIBLE,
    CONSTRAINT `guguns_sido_to_sidos_cdoe_fk`
    FOREIGN KEY (`sido_code`)
    REFERENCES `ssafytrip`.`sidos` (`sido_code`))
    ENGINE = InnoDB
    AUTO_INCREMENT = 235
    DEFAULT CHARACTER SET = utf8mb4
    COLLATE = utf8mb4_0900_ai_ci
    comment '구군정보테이블';

-- -----------------------------------------------------
-- Table `ssafytrip`.`contenttypes`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `ssafytrip`.`contenttypes` ;

CREATE TABLE IF NOT EXISTS `ssafytrip`.`contenttypes` (
	`content_type_id` int NOT NULL comment '콘텐츠타입번호',
	`content_type_name` varchar(45) DEFAULT NULL comment '콘텐츠타입이름',
    PRIMARY KEY (`content_type_id`))
    ENGINE = InnoDB
    DEFAULT CHARACTER SET = utf8mb4
    COLLATE = utf8mb4_0900_ai_ci comment '콘텐츠타입정보테이블';

-- -----------------------------------------------------
-- Table `ssafytrip`.`attractions`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `ssafytrip`.`attractions` ;

CREATE TABLE IF NOT EXISTS `ssafytrip`.`attractions` (
	`no` int NOT NULL AUTO_INCREMENT  comment '명소코드',
	`content_id` int DEFAULT NULL comment '콘텐츠번호',
	`title` varchar(500) DEFAULT NULL comment '명소이름',
    `content_type_id` int DEFAULT NULL comment '콘텐츠타입',
    `area_code` int DEFAULT NULL comment '시도코드',
    `si_gun_gu_code` int DEFAULT NULL comment '구군코드',
    `first_image1` varchar(100) DEFAULT NULL comment '이미지경로1',
    `first_image2` varchar(100) DEFAULT NULL comment '이미지경로2',
    `map_level` int DEFAULT NULL comment '줌레벨',
    `latitude` decimal(20,17) DEFAULT NULL comment '위도',
    `longitude` decimal(20,17) DEFAULT NULL comment '경도',
    `tel` varchar(20) DEFAULT NULL comment '전화번호',
    `addr1` varchar(100) DEFAULT NULL comment '주소1',
    `addr2` varchar(100) DEFAULT NULL comment '주소2',
    `homepage` varchar(1000) DEFAULT NULL comment '홈페이지',
    `overview` varchar(10000) DEFAULT NULL comment '설명',
    PRIMARY KEY (`no`),
    INDEX `attractions_typeid_to_types_typeid_fk_idx` (`content_type_id` ASC) VISIBLE,
    INDEX `attractions_sido_to_sidos_code_fk_idx` (`area_code` ASC) VISIBLE,
    CONSTRAINT `attractions_area_to_sidos_code_fk`
    FOREIGN KEY (`area_code`)
    REFERENCES `ssafytrip`.`sidos` (`sido_code`),

    CONSTRAINT `attractions_typeid_to_types_typeid_fk`
    FOREIGN KEY (`content_type_id`)
    REFERENCES `ssafytrip`.`contenttypes` (`content_type_id`))
    ENGINE = InnoDB
    AUTO_INCREMENT = 56644
    DEFAULT CHARACTER SET = utf8mb4
    COLLATE = utf8mb4_0900_ai_ci
    comment '명소정보테이블';


SET SQL_MODE=@OLD_SQL_MODE;
SET FOREIGN_KEY_CHECKS=@OLD_FOREIGN_KEY_CHECKS;
SET UNIQUE_CHECKS=@OLD_UNIQUE_CHECKS;